tests/parsing/smtlib/mcil/errors/220_define-system_bad_output_list.mcil
(define-system sys :output (Int))